Update Setup instructions

--- a/examples/tutorials/kaggle_movie_recommender_setup/Setup_Instructions.ipynb
+++ b/examples/tutorials/kaggle_movie_recommender_setup/Setup_Instructions.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "source": [
     "## Download the Data set\n",
-    "This step has been done for you, but to do this with a future set...\n",
+    "This step has been done for you, with the exception of `the-movies-dataset/credits.csv` and `the-movies-dataset/ratings.csv` because those files are over 100MB. Please download those and add them to that directory...\n",
     "\n",
     "You can either use the Kaggle API or download manually. We will save how to use Kaggle's API for another session since we need to authenticate with an API token, which is unique to your account.\n",
     "\n",
