Added Gradio UI example to recommender to show how to use it in a notebook

--- a/tutorials/kaggle_movie_recommender_setup/Setup_Instructions.ipynb
+++ b/tutorials/kaggle_movie_recommender_setup/Setup_Instructions.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f1ff86d5-f589-4205-87ee-f38671da928a",
    "metadata": {
     "collapsed": true,
@@ -87,7 +87,54 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pipreqs in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (0.4.11)\n",
+      "Requirement already satisfied: docopt in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from pipreqs) (0.6.2)\n",
+      "Requirement already satisfied: yarg in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from pipreqs) (0.1.9)\n",
+      "Requirement already satisfied: requests in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from yarg->pipreqs) (2.28.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from requests->yarg->pipreqs) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from requests->yarg->pipreqs) (2022.9.24)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from requests->yarg->pipreqs) (2.1.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from requests->yarg->pipreqs) (1.26.12)\n",
+      "Requirement already satisfied: nbconvert in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (7.2.2)\n",
+      "Requirement already satisfied: mistune<3,>=2.0.3 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (2.0.4)\n",
+      "Requirement already satisfied: markupsafe>=2.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (2.1.1)\n",
+      "Requirement already satisfied: bleach in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (5.0.1)\n",
+      "Requirement already satisfied: traitlets>=5.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (5.5.0)\n",
+      "Requirement already satisfied: jupyter-core>=4.7 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (4.11.1)\n",
+      "Requirement already satisfied: jinja2>=3.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (3.1.2)\n",
+      "Requirement already satisfied: jupyterlab-pygments in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (0.2.2)\n",
+      "Requirement already satisfied: nbclient>=0.5.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (0.7.0)\n",
+      "Requirement already satisfied: nbformat>=5.1 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (5.7.0)\n",
+      "Requirement already satisfied: tinycss2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (1.2.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (4.11.1)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (1.5.0)\n",
+      "Requirement already satisfied: defusedxml in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (0.7.1)\n",
+      "Requirement already satisfied: pygments>=2.4.1 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (2.11.2)\n",
+      "Requirement already satisfied: importlib-metadata>=3.6 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (5.0.0)\n",
+      "Requirement already satisfied: packaging in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbconvert) (21.3)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from importlib-metadata>=3.6->nbconvert) (3.10.0)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.5 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbclient>=0.5.0->nbconvert) (7.3.5)\n",
+      "Requirement already satisfied: nest-asyncio in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbclient>=0.5.0->nbconvert) (1.5.5)\n",
+      "Requirement already satisfied: jsonschema>=2.6 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbformat>=5.1->nbconvert) (4.16.0)\n",
+      "Requirement already satisfied: fastjsonschema in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from nbformat>=5.1->nbconvert) (2.16.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from beautifulsoup4->nbconvert) (2.3.2.post1)\n",
+      "Requirement already satisfied: webencodings in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from bleach->nbconvert) (0.5.1)\n",
+      "Requirement already satisfied: six>=1.9.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from bleach->nbconvert) (1.16.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from packaging->nbconvert) (3.0.9)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert) (0.18.1)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jsonschema>=2.6->nbformat>=5.1->nbconvert) (22.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert) (2.8.2)\n",
+      "Requirement already satisfied: entrypoints in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert) (0.4)\n",
+      "Requirement already satisfied: pyzmq>=23.0 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert) (23.2.0)\n",
+      "Requirement already satisfied: tornado>=6.2 in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (from jupyter-client>=6.1.5->nbclient>=0.5.0->nbconvert) (6.2)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pipreqs && pip install nbconvert"
    ]
@@ -107,10 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0c234c18-3603-4e5c-b318-6ba797717c00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook ./getting-started-with-a-movie-recommendation-system.ipynb to script\n",
+      "[NbConvertApp] Writing 34649 bytes to reqs/getting-started-with-a-movie-recommendation-system.py\n",
+      "INFO: Successfully saved requirements file in /Users/kthorpe/determined-examples/tutorials/kaggle_movie_recommender_setup/reqs/requirements.txt\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --output-dir=\"./reqs\" --to script ./getting-started-with-a-movie-recommendation-system.ipynb\n",
     "!cd ./reqs && pipreqs"
@@ -128,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e763d1a0-b3a4-4261-9737-1aeb48d5391f",
    "metadata": {},
    "outputs": [
@@ -136,10 +193,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "gradio==3.6\n",
       "matplotlib==3.6.0\n",
       "numpy==1.23.3\n",
       "pandas==1.5.0\n",
       "scikit_learn==1.1.2\n",
+      "scikit_surprise==1.1.3\n",
       "surprise==0.1\n"
      ]
     }
@@ -159,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3.9.13 ('movierec')",
    "language": "python",
    "name": "python3"
   },
@@ -173,11 +232,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "26fe660a9a652c01f05957848d1cebe6710a5fa64e8478bde34c043ce348248a"
    }
   }
  },
