--- a/tutorials/audio-transcription/setup.ipynb
+++ b/tutorials/audio-transcription/setup.ipynb
@@ -124,11 +124,136 @@
     "  #!git clone https://github.com/NVIDIA/apex\n",
     "  #!cd ./apex && pip install -v --disable-pip-version-check --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aeb17ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pytube\n",
+      "  Downloading pytube-12.1.0-py3-none-any.whl (56 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.5/56.5 kB\u001b[0m \u001b[31m862.6 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pytube\n",
+      "Successfully installed pytube-12.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pytube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "44b073dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pytube import YouTube\n",
+    "YOUTUBE_URL= \"https://youtu.be/ufjTT9WCt9c\"\n",
+    "url = YouTube(str(YOUTUBE_URL))\n",
+    "\n",
+    "audio_stream = url.streams.filter(only_audio=True).first()\n",
+    "out_file = audio_stream.download(output_path=\"./tmp/\")\n",
+    "\n",
+    "base, ext = os.path.splitext(out_file)\n",
+    "new_file = base + '.wav'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "de7be66d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Stream: itag=\"139\" mime_type=\"audio/mp4\" abr=\"48kbps\" acodec=\"mp4a.40.5\" progressive=\"False\" type=\"audio\">, <Stream: itag=\"140\" mime_type=\"audio/mp4\" abr=\"128kbps\" acodec=\"mp4a.40.2\" progressive=\"False\" type=\"audio\">, <Stream: itag=\"249\" mime_type=\"audio/webm\" abr=\"50kbps\" acodec=\"opus\" progressive=\"False\" type=\"audio\">, <Stream: itag=\"250\" mime_type=\"audio/webm\" abr=\"70kbps\" acodec=\"opus\" progressive=\"False\" type=\"audio\">, <Stream: itag=\"251\" mime_type=\"audio/webm\" abr=\"160kbps\" acodec=\"opus\" progressive=\"False\" type=\"audio\">]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(url.streams.filter(only_audio=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "151ac5f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: youtube_dl in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (2021.12.17)\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement os (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for os\u001b[0m\u001b[31m\n",
+      "\u001b[0mRequirement already satisfied: pytube in /Users/kthorpe/miniconda3/envs/movierec/lib/python3.9/site-packages (12.1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install youtube_dl\n",
+    "!pip install os\n",
+    "!pip install pytube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb506032",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] BaW_jenozKc: Downloading webpage\n",
+      "[download] Destination: youtube-dl test video ''_ä↭𝕐-BaW_jenozKc.m4a\n",
+      "[download] 100% of 154.06KiB in 00:0270KiB/s ETA 00:00\n",
+      "[ffmpeg] Correcting container in \"youtube-dl test video ''_ä↭𝕐-BaW_jenozKc.m4a\"\n",
+      "[ffmpeg] Destination: youtube-dl test video ''_ä↭𝕐-BaW_jenozKc.wav\n",
+      "Deleting original file youtube-dl test video ''_ä↭𝕐-BaW_jenozKc.m4a (pass -k to keep)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import unicode_literals\n",
+    "import youtube_dl\n",
+    "\n",
+    "\n",
+    "ydl_opts = {\n",
+    "    'format': 'bestaudio/best',\n",
+    "    'postprocessors': [{\n",
+    "        'key': 'FFmpegExtractAudio',\n",
+    "        'preferredcodec': 'wav',\n",
+    "    }],\n",
+    "}\n",
+    "with youtube_dl.YoutubeDL(ydl_opts) as ydl:\n",
+    "    ydl.download(['http://www.youtube.com/watch?v=BaW_jenozKc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48c328fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.13 ('movierec')",
    "language": "python",
    "name": "python3"
   },
@@ -142,11 +267,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "26fe660a9a652c01f05957848d1cebe6710a5fa64e8478bde34c043ce348248a"
    }
   }
  },
