--- a/tutorials/object_detection_bounding_box/setup.ipynb
+++ b/tutorials/object_detection_bounding_box/setup.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1333a1b5-5c38-4712-bb34-dec56cbedd98",
+   "metadata": {},
+   "source": [
+    "# Setup for Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ed0d6ab-1600-4cd7-aa1f-1620fb1f2af5",
+   "metadata": {},
+   "source": [
+    "## Gather dependencies\n",
+    "We want to automagically create a `requirements.txt`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3d3ff1f-3d67-46e3-af51-e2a7e5c07adb",
+   "metadata": {},
+   "source": [
+    "### Generate using `pipreqs` and `nbconvert`\n",
+    "This method ensures we get the requirements from the notebook and not the entire environment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f4447c81-0c69-4cc7-9781-f9b8637282fd",
@@ -67,8 +94,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0c93fdc-ee9a-440b-afac-136dc067d659",
+   "metadata": {},
+   "source": [
+    "### Convert the `ipynb` file and create the requirements\n",
+    "\n",
+    "What is `nbconvert` and why do we need it? \n",
+    "- `pipreqs` only works on `.py` files. We have to convert the `.ipynb` file to a `.py` file\n",
+    "\n",
+    "Setup: I already created a `./reqs` directory, but you can also create one using the UI or `mkdir ./reqs`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "92be52e4-04e7-4b9c-a189-2ae84cfdcfd0",
    "metadata": {},
    "outputs": [
@@ -77,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook ./bounding-box-model.ipynb to script\n",
-      "[NbConvertApp] Writing 19850 bytes to reqs/bounding-box-model.py\n",
+      "[NbConvertApp] Writing 20171 bytes to reqs/bounding-box-model.py\n",
       "INFO: Successfully saved requirements file in /run/determined/workdir/shared_fs/det_share/users/kate/determined-examples/tutorials/object_detection_bounding_box/reqs/requirements.txt\n"
      ]
     }
@@ -88,8 +128,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "958fbd71-46cf-400e-af42-f0ff7a0ca76e",
+   "metadata": {},
+   "source": [
+    "### To see your new, beautiful `requirements.txt`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "32afc8e9-9256-4d38-93cf-9a6d5db7a0d8",
    "metadata": {},
    "outputs": [
@@ -104,30 +152,13 @@
       "Pillow==9.3.0\n",
       "scikit_learn==1.1.3\n",
       "scipy==1.9.1\n",
+      "tensorflow==2.8.3\n",
       "tqdm==4.64.0\n"
      ]
     }
    ],
    "source": [
     "!cat ./reqs/requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8bb2601e-3869-4871-816a-db9db8f97e26",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/run/determined/workdir/shared_fs/det_share/users/kate/determined-examples/tutorials/object_detection_bounding_box\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
    ]
   },
   {
@@ -141,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
